<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:paddingBottom="0dp"
        tools:context="org.yyama.moneycounter.twd.MainActivity" >

        <TableLayout
            android:id="@+id/TableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:shrinkColumns="2,3"
            android:stretchColumns="2,3" >

            <TableRow
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center_horizontal"
                    android:text="@string/kind" />
        
                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/num" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/sub_total" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img2000gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd2000gen" />

                <TextView
                    android:id="@+id/Text2000gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen2000" />

                <TextView
                    android:id="@+id/Num2000gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum2000gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img1000gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd1000gen" />

                <TextView
                    android:id="@+id/Text1000gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen1000" />

                <TextView
                    android:id="@+id/Num1000gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum1000gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img500gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0500gen" />

                <TextView
                    android:id="@+id/Text500gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen500" />

                <TextView
                    android:id="@+id/Num500gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum500gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img200gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0200gen" />

                <TextView
                    android:id="@+id/Text200gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen200" />

                <TextView
                    android:id="@+id/Num200gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum200gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img100gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0100gen" />

                <TextView
                    android:id="@+id/Text100gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen100" />

                <TextView
                    android:id="@+id/Num100gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum100gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img50gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0050gen" />

                <TextView
                    android:id="@+id/Text50gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen50" />

                <TextView
                    android:id="@+id/Num50gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum50gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img20gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0020gen" />

                <TextView
                    android:id="@+id/Text20gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen20" />

                <TextView
                    android:id="@+id/Num20gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum20gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img10gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0010gen" />

                <TextView
                    android:id="@+id/Text10gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen10" />

                <TextView
                    android:id="@+id/Num10gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum10gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img5gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0005gen" />

                <TextView
                    android:id="@+id/Text5gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen5" />

                <TextView
                    android:id="@+id/Num5gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum5gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img1gen"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0001gen" />

                <TextView
                    android:id="@+id/Text1gen"
                    style="@style/LinkStyle"
                    android:text="@string/gen1" />

                <TextView
                    android:id="@+id/Num1gen"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum1gen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow style="@style/RowStyle" >

                <ImageView
                    android:id="@+id/img5kaku"
                    style="@style/ImgStyle"
                    android:src="@drawable/twd0005kaku" />

                <TextView
                    android:id="@+id/Text5kaku"
                    style="@style/LinkStyle"
                    android:text="@string/kaku5" />

                <TextView
                    android:id="@+id/Num5kaku"
                    style="@style/NumStyle" />

                <TextView
                    android:id="@+id/Sum5kaku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp" >

        <TableRow
            android:id="@+id/TableRow18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="0dp"
            android:paddingTop="0dp" >

            <Button
                android:id="@+id/btnClear"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:text="@string/all_clear" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginRight="20dp"
                android:layout_marginTop="0dp"
                android:layout_weight="5"
                android:text="@string/total"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/allSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginTop="0dp"
                android:layout_weight="10"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/adSpace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="0dp"
        android:layout_weight="0"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>